test/Fail/Issue2576.err
Issue2576.agda:6.1-13: error: [ClashingDefinition]
Multiple definitions of ⊥. Previous definition
⊥ is in scope as
  * a data type Issue2576.⊥ brought into scope by
    - its definition at Issue2576.agda:5.6-7
when scope checking the declaration
  data ⊥ where
